# santa-2.0

./: .gitignore  CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: build.yml
src/: main.cpp  santa.cpp  santa.h  santadecisionstable.cpp  santadecisionstable.h  santarulestable.cpp  santarulestable.h  utils.cpp  utils.h
